--- a/workshop/exercise-01/style.css
+++ b/workshop/exercise-01/style.css
@@ -11,9 +11,8 @@ body {
     flex-direction: column;
 }
 
-.nav {
+.item {
     height: 50px;
-    background: red;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -23,16 +22,4 @@ body {
     display: flex;
     border: 2px gold;
     flex: 1;
-    display: flex;
-    align-items: center;
-    justify-content: center;
 }
-
-.footer {
-    height: 50px;
-    background: green;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-}
-
