added transition effect

--- a/workshop/exercise-02/style.css
+++ b/workshop/exercise-02/style.css
@@ -15,6 +15,14 @@ body {
 .navbar > a {
     text-decoration: none;
     color: white;
+    margin: 0 40px;
+    margin-bottom: 10px;
+    padding-bottom: 5px;
+    transition: opacity 0.2s;
+}
+
+.navbar > a:hover {
+    opacity: 0.5;
 }
 
 .logo {
