--- a/workshop/exercise-02/style.css
+++ b/workshop/exercise-02/style.css
@@ -16,7 +16,7 @@ body {
     text-decoration: none;
     color: white;
     margin: 0 40px;
-    transition: opacity 0.2s;
+    transition: opacity 0.2s ease-in-out;
 }
 
 .navbar > a:hover {
