--- a/workshop/exercise-03/style.css
+++ b/workshop/exercise-03/style.css
@@ -1,5 +1,5 @@
 
-body {
+body, h1 {
     margin: 0;
 }
 
@@ -8,4 +8,12 @@ body {
     background-image: url('imgs/bg.jpg'); /* you need to specify the path to the file */
     background-size: cover; /* Use this to have the image cover the full space */
     background-position: center; /* Use this to center the background image */
+    color: white;
 }
+
+.center {
+    justify-content: center;
+    align-items: center;
+    display: flex;
+}
+
