--- a/workshop/exercise-03/style.css
+++ b/workshop/exercise-03/style.css
@@ -1,6 +1,7 @@
 
 body, h1 {
     margin: 0;
+    font-family: "Poppins";
 }
 
 .main {
@@ -17,3 +18,6 @@ body, h1 {
     display: flex;
 }
 
+h1 {
+    text-shadow: 2px 2px black;
+}
