--- a/workshop/exercise-04/style.css
+++ b/workshop/exercise-04/style.css
@@ -2,3 +2,32 @@
 /* html {
     background-color: hotpink;
 } */
+
+body {
+    margin: 0;
+    font-family: "Poppins";
+}
+
+.dropdown {
+    display: inline-block;
+    position: absolute;
+    background-color: #3a3633;
+    color: white;
+    padding: 0  20px 0 20px;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: lightskyblue;
+    padding: 10px 15px;
+    z-index: 1;
+}
+
+.dropdown:hover .dropdown-content {
+    display: block;
+}
+
+h1 {
+    margin: 20px;
+}
