--- a/workshop/exercise-04/style.css
+++ b/workshop/exercise-04/style.css
@@ -3,3 +3,16 @@ body {
     /* color: red; */
     font-family: "Poppins";
 }
+
+.center {
+    display: block;
+    text-align: center;
+    padding: 40px;
+    margin: 10px;
+}
+
+.top-title {
+    margin: 0;
+    border-radius: 20px;
+    border: 2px black;
+}
