--- a/workshop/exercise-04/style.css
+++ b/workshop/exercise-04/style.css
@@ -4,15 +4,45 @@ body {
     font-family: "Poppins";
 }
 
-.center {
-    display: block;
+.main {
     text-align: center;
-    padding: 40px;
-    margin: 10px;
+    margin-top: 10px;
 }
 
 .top-title {
-    margin: 0;
-    border-radius: 20px;
-    border: 2px black;
+    border-radius: 10px;
+    border: 2px solid black;
+    padding: 10px 10px; 
+    font-size: 1.5em;
+    line-height: 1.5;
+    font-size: 1rem;
+    display: inline-block;
+}
+
+.main > p {
+    max-width: 400px;
+    margin: 0 auto;
+    font-weight: bold;
+}
+
+.main > h1 {
+    margin: 15px;
+    
+}
+
+.main > a {
+    margin-top: 5px;
+}
+
+.link {
+    color: lightskyblue;
+    text-decoration: none;
+}
+
+.link:hover {
+    text-decoration: underline;
+}
+
+.link::after{
+    content: " >";
 }
