--- a/workshop/exercise-05/style.css
+++ b/workshop/exercise-05/style.css
@@ -2,6 +2,18 @@ body {
     margin: 0;
 }
 
+.main {
+    display: flex;
+    /* flex-wrap: wrap; */
+}
+
+.item {
+    flex: 1;
+    /* border: 1px solid red; */
+    outline: red solid;
+}
+
+
 img {
     width: 100%;
 }
