--- a/workshop/exercise-01/style.css
+++ b/workshop/exercise-01/style.css
@@ -16,19 +16,20 @@ i can use the .item class to center them */
 }
 
 .item {
-    height: 50px;
+    text-align: center;
+    align-items: center;
     display: flex;
     align-items: center;
     justify-content: center;
 }
 
-.baritem {
-    background: black;
-    color: white;
-}
-
 .content {
-    display: flex;
-    border: 2px gold;
     flex: 1;
 }
+
+.nav, .footer {
+    height: 50px;
+    background-color: #3a3633;
+    color: #fff;
+}
+
