--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -1,49 +1,81 @@
 body {
-    margin: 0;
-    font-family: Poppins, sans-serif;
+  margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
 .header {
-
+  text-align: center;
+  background-color: #036bfc;
+  color: white;
+  font-size: 24px;
+  padding: 20px;
+  box-shadow: 0 4px 6px 2px #888888;
 }
 
 .registration-form {
-
+  margin: 30px auto;
+  padding: 20px;
+  box-shadow: 0 0 10px 1px #888888;
+  max-width: 80%;
+  border-radius: 5px;
 }
 
 .text-field {
-
+  display: block;
+  margin: 10px auto 10px auto;
+  border: 1px solid #036bfc;
+  border-radius: 5px;
+  width: 100%;
+  max-width: 400px;
+  min-height: 30px;
+  padding: 10px;
+  box-sizing: border-box;
 }
 
 .radio-label,
 .checkbox-label {
-
+  text-align: left;
+  margin: 10px 10px 10px 0;
 }
 
 label {
-
+  display: block;
+  text-align: center;
 }
 
 .section {
-
+  border-top: 1px solid lightgray;
+  padding-top: 10px;
 }
 
 .section > label {
-
+  text-align: left;
 }
 
 select {
-
+  margin-left: 10px;
 }
 
 textarea {
-
+  display: block;
+  width: 100%;
+  min-height: 75px;
+  margin-bottom: 35px;
+  border: none;
+  background-color: #f5f5f5;
 }
 
 .form-button {
-
+  padding: 10px 20px;
+  border: 1px solid #036bfc;
+  background-color: white;
+  transition: background-color 0.3s;
+  display: block;
+  cursor: pointer;
+  margin: 20px auto;
 }
 
 .form-button:hover {
-    
+  background-color: #036bfc;
+  color: white;
 }
