--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,57 @@
-h3 {
-  margin-bottom: 0;
+body {
+  margin: 15px;
+}
+
+.header {
+  text-align: center;
+}
+
+.facts {
+  border: 1px solid gray;
+  padding: 20px;
+  width: 100%;
+  border-radius: 5px;
+  border-spacing: 0;
+}
+
+tr:first-child {
+  text-align: left;
+}
+
+tr * {
+  padding: 10px;
+}
+
+tr:nth-child(even) {
+  background-color: #9daba1;
+}
+
+
+
+.links {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0;
+}
+
+li {
+  width: 100%;
+  text-align: center;
+  background-color: #136df2;
+  flex:1;
+  margin-right: 20px;
+  list-style-type: none;
+
+}
+
+li:last-child {
+  margin-right: 0;
+}
+
+a {
+  color: white;
+  text-decoration: none;
+  display: block;
+  padding: 15px 0;
 }
