--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -10,7 +10,46 @@ body {
 }
 
 .fast {
+  animation: slide 1s ease-in-out forwards;
 }
 
 .cool {
+  padding: 20px 30px;
+  text-transform: uppercase;
+  color: white;
+  background-color: #004cff;
+  outline: none;
+  border-radius: 10px;
+}
+
+.cool, .cool:focus, .cool:active {
+  outline: none;
+  border: none;
+}
+
+.cool:active {
+  animation: button 1s ease-in-out forwards;
+}
+
+@keyframes slide {
+  from {
+    opacity: 0;
+    transform: translateX(100%);
+  }
+  to {
+    opacity: 1;
+    transform: translateY(0);
+  }
+}
+
+@keyframes button {
+  0% {
+    transform: rotate(0) scale(1);
+  }
+  50% {
+    transform: rotate(180deg) scale(1.3);
+  }
+  100% {
+    transform: rotate(360deg) scale(0.95);
+  }
 }
