--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -3,7 +3,7 @@ html{
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
     box-sizing: border-box;
-  }
+}
 
 body {
     margin: 0;
@@ -18,7 +18,6 @@ body {
     position: relative;
     color: #fff;
     background: rgba(22,22,22,0);
-    text-decoration: none;
     display: inline-block;
     padding: 30px;
     font-size: large;
@@ -40,24 +39,22 @@ body {
 ul[role="menubar"]{
     display: none;
     margin-top: 30px;
-    width: max-content;
+    width: 260px;
     position: absolute;
     background-color: lightblue;
     border-radius: 0 0 8px 8px;
-    
+    font-weight: bold;
 }
 
 li, ul{
     margin: 0;
     padding: 0;
     list-style-type: none;
-    text-decoration: none;
 }
+
 ul[role="menubar"]>li{
     display: block;
     padding: 15px 25px;
-
-
 }
 
 ul[role="menubar"]>li:last-child{
@@ -66,4 +63,8 @@ ul[role="menubar"]>li:last-child{
 
 ul[role="menubar"]>li:hover{
     background-color: dodgerblue;
+}
+
+a{
+    text-decoration: none;
 }
