--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,28 +4,54 @@ body {
 }
 
 .header {
-
+  text-align: center;
+  background: dodgerblue;
+  color: #fff;
+  box-shadow: 3px 4px 5px x#ddd;
+  padding: 20px 20px;
 }
 
 .registration-form {
-
+  display: block;
+  /* border: 10px solid goldenrod; */
+  border: 2px solid #ddd;
+  box-shadow: 0px 0px 5px 1px #ddd;
+  width: 60%;
+  margin: 0 auto;
+  padding: 20px 30px 20px;
+  /* justify-content: center;
+  flex-direction: column; */
 }
 
-.text-field {
+/* display: block and text-align: center are needed */
 
+.text-field {
+  display: block;
+  text-align: center;
+  /* margin: auto; auto-resizes element to be centered via margins */
+  margin: 10px auto;
+  min-height: 30px;
+  width: 400px;
+  border: 1px solid dodgerblue;
+  border-radius: 10px;
+  /* border-color: lightblue; */
 }
 
 .radio-label,
 .checkbox-label {
-
+  text-align: left;
+  margin-left: 10px;
+  padding: 5px 5px;
 }
 
 label {
-
+  display: block;
+  text-align: center;
 }
 
 .section {
-
+  border-top: 1px solid #ddd;
+  padding-top: 20px;
 }
 
 .section > label {
