--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,53 @@
 h3 {
   margin-bottom: 0;
+
+}
+
+.facts {
+  border-collapse: collapse;
+  width: 100%;
+  border: 10px solid goldenrod;
+}
+
+.facts td, .facts th {
+  padding: 8px;
+  /* border: 10px solid goldenrod; */
+}
+
+.facts th {
+  text-align: left;
+}
+
+.facts tr:nth-child(even){
+  background-color: lightgrey;
+}
+
+.header {
+  text-align: center;
+}
+
+/* treat the links as flexboxes */
+.links {
+  display: flex;
+  justify-content: space-between;
+
+}
+
+.links > li {
+  display: flex;
+  list-style-type: none;
+  min-width: 20%;
+  min-height: 10%;
+  margin: 10px auto;
+  /* border: 4px solid red; */
+  background-color: dodgerblue;
+  border-radius: 4px;
+  text-align: center;
+}
+
+li > a {
+  text-decoration: none;
+  margin: 10px auto;
+  color: #fff;
+  width: 100%;
 }
