--- a/workshop/exercise-07/style.css
+++ b/workshop/exercise-07/style.css
@@ -1,7 +1,77 @@
+html{
+  font-family: 'Poppins','Muli', 'Arial', 'helvetica neue',sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+}
+
 body {
   margin: 0;
 }
 
 .mobile-nav-button img {
   width: 18px;
+}
+
+.container{
+  display: flex; 
+  width: 100vw;
+
+}
+
+header{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction:row;
+  width: 100vw;
+  justify-content: space-between;
+  align-items: center;
+}
+
+.desktop-nav{
+  margin: 0;
+  padding: 0;
+  display: flex;
+  flex-direction: row;
+  height: 100%;
+  align-items: center;
+  flex:1;
+}
+
+.desktop-nav ul{
+  display: flex;
+  flex-direction: row;
+  justify-content: flex-end;
+  flex:1;
+}  
+
+ul{
+  list-style-type:none; 
+}
+
+li{
+  padding-left: 28px;
+  font-size: large;
+}
+
+li:last-child{
+  padding-right: 15px;
+}
+.mobile-nav-button{
+  display: none;
+}
+
+@media only screen and (min-width: 401px) and (max-width: 680px) {
+  .mobile-nav-button{
+    display: flex;
+    padding: 7px;
+    margin: 20px;
+    border: 2px solid black;
+    border-radius: 8px;
+    box-shadow: 2px 2px 8px black;
+  }
+  .desktop-nav{
+    display:none;
+  }
 }
