--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -7,10 +7,36 @@ body {
   display: flex;
   align-items: center;
   justify-content: center;
+  /* border: 10px solid goldenrod; */
 }
 
+
+
 .fast {
+  /* pos needs to be relative to current natural pos */
+  position: relative;
+  animation: slideIn 1s ease-in-out;
+}
+
+@keyframes slideIn {
+  from {
+    left: 300px;
+    opacity: 0.3;
+  }
+  to {
+    left: 0px;
+    opacity: 1;
+  }
 }
 
 .cool {
+  /* min-width: 15%; */
+  padding: 20px;
+  text-transform: uppercase;
+  border-radius: 5px;
+  background-color: dodgerblue;
+  color: #fff;
+  box-shadow: 0px 2px 10px 2px #ddd;
+  border: 1px solid dodgerblue;
 }
+
