--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -33,10 +33,16 @@ body {
   /* min-width: 15%; */
   padding: 20px;
   text-transform: uppercase;
+  /* font-weight: bold; */
   border-radius: 5px;
   background-color: dodgerblue;
   color: #fff;
   box-shadow: 0px 2px 10px 2px #ddd;
   border: 1px solid dodgerblue;
+  transition: all 0.5s ease-in-out;
 }
 
+.cool:hover {
+  transform: scale(1.3);
+  /* transition: all 1s ease-in-out; */
+}
