--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -52,11 +52,11 @@ body {
   color: #fff;
   box-shadow: 0px 2px 10px 2px #ddd;
   border: 1px solid dodgerblue;
-  transition: all 0.5s ease-in-out;
+  transition: all 1.3s ease-in-out;
 }
 
 .cool:hover {
-  transform: scale(1.3);
+  transform: scale(1.3) rotate(360deg);
   /* transition: all 1s ease-in-out; */
   cursor: pointer;
 }
