--- a/workshop/exercise-09/style copy.css
+++ b/workshop/exercise-09/style copy.css
@@ -9,46 +9,48 @@ h3 {
 .facts {
   margin: 0 auto;
   text-align: left;
+  width: 100%;
   padding: 20px;
-  width: 98%;
-  border: 1px solid #ddd;
-  border-spacing: 0px;
+  border: 1px #ddd solid;
 }
 
-.facts tr:nth-child(even) {
-  background: #ddd;
+.facts > tr {
+  display: flex;
+  flex-direction: row;
+  padding: 20px;
+  justify-content: space-between;
 }
 
-.facts td {
+tr:nth-child(even) {
+  background-color: #ddd;
+}
+
+td {
   padding: 10px;
 }
 
 .links {
   display: flex;
-  flex-direction: row;
-  align-items: flex-start;
-  justify-content: space-between;
-  margin-top: 40px;
   padding: 0px;
+  justify-content: space-between;
 }
-
-.links li {
+.links > li {
   flex: 1;
+  margin-right: 20px;
   list-style-type: none;
-  margin-right: 20px;
 }
 
-.links li:last-of-type {
+.links > li:last-of-type {
   margin-right: 0px;
+  width: 100%;
 }
 
-.links a {
-  margin-right: 20px;
+a {
   text-decoration: none;
-  text-align: center;
+  background-color: dodgerblue;
   color: white;
-  background: dodgerblue;
   padding: 20px;
+  text-align: center;
   display: inline-block;
   box-sizing: border-box;
   width: 100%;
