--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -10,7 +10,51 @@ body {
 }
 
 .fast {
+  position: relative;
+  animation: slideIn 1s ease-in-out;
 }
 
 .cool {
+  padding: 15px;
+  width: 150px;
+  font-size: 16px;
+  cursor: pointer;
+  border-radius: 5px;
+  box-shadow: 0px 4px 6px 2px #ddd;
+  color: white;
+  background: dodgerblue;
+  text-transform: uppercase;
+  transition: 1s ease-in-out;
 }
+
+.cool:active {
+  animation: buttonGrow 1s;
+}
+
+@keyframes buttonGrow {
+  0% {
+  transform: scale(1);
+  transform: rotate(0deg);
+  }
+
+  50% {
+    transform: scale(2);
+    transform: rotate(180deg);
+  }
+
+  100% {
+    transform: scale(1);
+    transform: rotate(360deg);
+  }
+}
+
+  @keyframes slideIn{
+    0%{
+      opacity:0;
+      transform: translateX(100%);
+    }
+    100%{
+      opacity 1;
+      transform: translateX(0%);
+    }
+  }
