--- a/workshop/exercise-16-optional/style.css
+++ b/workshop/exercise-16-optional/style.css
@@ -7,14 +7,50 @@ body {
     font-family: "Poppins";
 }
 
+h1 {
+    margin-left: 40px;
+}
+
 .container {
-    border: 10px solid goldenrod;
+    /* border: 10px solid goldenrod; */
     display: flex;
     padding: 10px 20px;
 }
 
 .btn {
+    border-radius: 5px;
+}
+
+.btn-primary {
+    background-color: dodgerblue;
+    border: 1px solid dodgerblue;
+    color: #fff;
+}
+
+.btn-secondary {
+    background-color: slategrey;
+    border: 1px solid slategrey;
+    color: #fff;
+}
+
+.btn-lg {
+    padding: 15px 25px;
+    margin: 0 5px;
+    font-size: 1.5rem;
+}
+
+.btn-sm {
     padding: 10px 10px;
     margin: 0 5px;
-    border-radius: 5px;
+    font-size: 1rem;
+}
+
+/* need a different container */
+.block-container {
+    display: flex;
+    flex-direction: column;
+}
+
+.btn-block {
+    margin: 5px 20px;
 }
