--- a/workshop/exercise-17-optional/style.css
+++ b/workshop/exercise-17-optional/style.css
@@ -1,3 +1,36 @@
-html {
+/* html {
     background: mistyrose;
+} */
+
+body {
+    margin: 10px 10px;
+    font-family: "Poppins";
+}
+
+.card {
+
+}
+
+.card-header {
+
+}
+
+.card-body {
+
+}
+
+.card-title {
+
+}
+
+.card-text {
+
+}
+
+.btn {
+
+}
+
+.btn-primary {
+    
 }
