--- a/workshop/exercise-14-optional/style.css
+++ b/workshop/exercise-14-optional/style.css
@@ -8,7 +8,7 @@ body {
   border: none;
   font-family: 'Poppins', sans-serif;
   font-size: 24px;
-  opacity: 0.8;
+  margin: 5px 0;
 }
 
 .btn-primary {
