--- a/workshop/exercise-16-optional/style.css
+++ b/workshop/exercise-16-optional/style.css
@@ -1,5 +1,10 @@
 body {
   margin: 20px;
+  text-align: center;
+}
+
+div {
+  margin: 60px 0;
 }
 
 .btn {
@@ -11,6 +16,58 @@ body {
   margin: 5px 0;
 }
 
+.btn-lg {
+  padding: 30px;
+}
+
+.btn-sm {
+  padding: 5px;
+}
+
+.btn-block {
+  display: block;
+  width: 100%;
+}
+
+button:disabled {
+  opacity: 0.6;
+}
+
+.btn-primary {
+  background-color: royalblue;
+  color: white;
+}
+.btn-secondary {
+  background-color: gray;
+  color: white;
+}
+.btn-success {
+  background-color: green;
+  color: white;
+}
+.btn-danger {
+  background-color: red;
+  color: white;
+}
+.btn-warning {
+  background-color: goldenrod;
+  color: black;
+}
+.btn-info {
+  background-color: rgb(89, 167, 231);
+  color: white;
+}
+.btn-light {
+  color: black;
+}
+.btn-dark {
+  background-color: rgb(58, 57, 57);
+  color: white;
+}
+.btn-link {
+  background-color: white;
+  color: rgb(36, 36, 177);  
+}
 .btn-primary-outline {
   border: 2px solid royalblue;
   color: royalblue;
