--- a/workshop/exercise-18-optional/style.css
+++ b/workshop/exercise-18-optional/style.css
@@ -1,3 +1,38 @@
-html {
+/* html {
     background-color: mistyrose;
+} */
+
+body {
+    margin: 0;
+    font-family: "Poppins";
 }
+
+.card {
+    border: 1px solid lightgray;
+    border-radius: 5px;
+    /* border: 10px solid goldenrod; */
+    max-width: 95%; 
+    margin: 20px auto;
+    box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.2);
+}
+
+.card-header {
+    border-bottom: 1px solid lightgray;
+    background-color: whitesmoke;
+    padding: 15px 20px;
+    font-weight: bold;
+}
+
+.list-group {
+    margin: 0;
+    padding: 0;
+    list-style-type: none;
+}
+
+.list-group-item {
+    border-bottom: 1px solid lightgray;
+    padding: 15px 20px;
+    font-weight: bold;
+}
+
+
