--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,73 +4,75 @@ body {
 }
 
 .header {
-  text-align: center;
   color: white;
-  font-size: 26px;
   background-color: dodgerblue;
   padding: 10px;
-  box-shadow: 0px 4px 6px 2px #ddd;
+  text-align: center;
+  box-shadow: 0 1px 3px 2px #ddd;
 }
 
 .registration-form {
-  margin-top: 50px;
-  padding: 20px;
-  box-shadow: 0px 0px 10px 1px #ddd;
-  max-width: 80%;
-  margin: 0 auto;
   border-radius: 5px;
+  margin: 0 auto;
+  width: 85%;
+  margin-top: 30px;
+  box-shadow: 0 2px 4px 6px #ddd;
+  padding: 20px;
 }
 
 .text-field {
-  padding: 10px;
   display: block;
-  margin: 10px auto;
+  border: 1px dodgerblue solid;
   border-radius: 5px;
-  border: solid dodgerblue 1px;
-  box-sizing: border-box;
   width: 100%;
+  padding: 5px;
   max-width: 400px;
+  margin: 0 auto;
 }
 
 .radio-label,
 .checkbox-label {
   text-align: left;
-  margin: 10px;
-  margin-left: 0px;
 }
 
 label {
   display: block;
   text-align: center;
-  margin: 10px;
+  padding: 05px;
 }
 
 .section {
   border-top: 1px solid #ddd;
-  padding: 10px 0;
+  margin-top: 10px;
 }
+
 .section > label {
   text-align: left;
 }
 
+select {
+  margin-left: 10px;
+}
+
 textarea {
   display: block;
-  margin: 10px auto;
-  width: 95%;
-  height: 75px;
+  border: 0;
+  width: 100%;
   background-color: #f5f5f5;
-  border: 0px;
+  min-height: 100px;
+  margin-top: 5px;
+  margin-bottom: 10px;
 }
 
 .form-button {
-  padding: 15px 30px;
-  border-radius: 5px;
-  border: 1px solid dodgerblue;
-  transition: background-color 0.2s ease-in-out;
-  cursor: pointer;
+  display: block;
+  margin: 0 auto;
+  padding: 20px 40px;
+  border: dodgerblue 1px solid;
+  transition: 200ms;
 }
 
 .form-button:hover {
+  background: dodgerblue;
   color: white;
-  background-color: dodgerblue;
 }
