--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -61,7 +61,6 @@ body {
   padding-left: 35px;
   margin-bottom: 12px;
   cursor: pointer;
-  font-size: 22px;
   -webkit-user-select: none;
   -moz-user-select: none;
   -ms-user-select: none;
@@ -70,18 +69,18 @@ body {
 
 .radio-label input {
   position: absolute;
-  opacity: 1;
+  opacity: 0;
   cursor: pointer;
-  height: 25px;
-  width: 25px;
+  height: 0px;
+  width: 0px;
 }
 
 .checkMark {
   position: absolute;
   top: 0px;
   left: 0px;
-  height: 22px;
-  width: 22px;
+  height: 12px;
+  width: 12px;
   background-color: #eee;
   border-radius: 50%;
   border: 1px solid dodgerblue;
@@ -91,8 +90,8 @@ body {
   background-color: darkgray;
 }
 
-.radio-label input:checked {
-  background-color: #2196f3;
+.radio-label input:checked ~ .checkMark {
+  background-color: dodgerblue;
 }
 
 .checkMark:after {
@@ -101,23 +100,18 @@ body {
   display: none;
 }
 
-input[type='radio'] {
+.radio-label input:checked ~ .checkMark:after {
+  display: block;
 }
 
-.input[type='radio']:checked {
-  border: 0px;
-  width: 100%;
-  height: 4em;
-}
-/* 
 .radio-label .checkMark:after {
-    top: 9px;
-    left: 9px;
-    width: 8px;
-    height: 8px;
-    border-radius: 50%;
-    background: white;
-}  */
+  top: 2.1px;
+  left: 2.1px;
+  width: 8px;
+  height: 8px;
+  border-radius: 50%;
+  background: white;
+}
 
 textarea {
   height: 8em;
