--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,70 @@
+html {
+  font-family: 'Poppins', 'Muli', 'Arial', 'helvetica neue', sans-serif;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  box-sizing: border-box;
+  font-size: small;
+}
+
+body {
+  margin: 0 auto;
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  padding-bottom: 5em;
+  min-height: 80vh;
+  min-width: 100vw;
+}
+
+.facts {
+  display: flex;
+  flex: 1;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid lightgray;
+  min-width: 90vw;
+  max-height: 18vh;
+  margin: 0px 15px;
+  padding: 0px 20px;
+  border-collapse: collapse;
+}
+
+td,
+th {
+  width: 95vw;
+}
+tr:nth-child(2n + 2) {
+  background-color: lightgray;
+}
+
+ul {
+  display: flex;
+  justify-content: space-between;
+  list-style: none;
+  padding-left: 0;
+  margin-top: 0;
+  width: 98vw;
+}
+
+li {
+  display: flex;
+  align-items: center;
+  width: 23vw;
+  background-color: dodgerblue;
+  margin-top: 0;
+}
+
+a {
+  flex: 1;
+  padding: 10px 50px;
+  text-decoration: none;
+  color: white;
+}
+
 h3 {
-  margin-bottom: 0;
+  align-self: start;
+  text-align: left;
+  margin-left: 20px;
+  margin-bottom: 4px;
 }
