--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -7,7 +7,35 @@ body {
 }
 
 .nav-dropdown {
+    padding:20px;
     color: #fff;
     text-decoration: none;
-    display: inline-block;
+    display:block;
+    position:relative;
+}
+
+.nav-dropdown:hover > .dropdown-menu{
+    visibility: visible;
+}
+
+.dropdown-menu{
+    display: block;
+    position: absolute;
+    top: 100%;
+    left: 0;
+    visibility: hidden;
+}
+
+.menu-list{
+    margin:0;
+    padding:0;
+}
+.menu-list > li{
+    background-color: rgb(0, 119, 255);
+    list-style-type:none;
+    padding: 15px 25px;
+}
+
+.menu-list > li:hover{
+    background-color:darkblue;
 }
