--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -4,46 +4,89 @@ body {
 }
 
 .header {
-
+    color:white;
+    background-color: blue;
+    text-align: center;
+    padding:15px;
+    box-shadow: 0 4px 6px 2px #ddd;
+    margin:0px;
 }
 
 .registration-form {
-
+    margin:0 auto;
+    box-shadow: 0px 0px 10px 1px #ddd;
+    padding:20px;
+    max-width:80%;
+    margin-top:20px;
+    margin-bottom:30px;
+    border-radius:4px;
 }
 
 .text-field {
-
+    display:block;
+    margin:0 auto;
+    border:2px lightskyblue solid;
+    border-radius:2px;
+    padding:5px;
+    width:100%;
+    max-width:400px;
+    box-sizing:border-box;
+    margin-top:10px;
+    margin-bottom:10px;
 }
 
 .radio-label,
 .checkbox-label {
+    display:inline-block;
+    margin:5px;
+    margin-left:0px
 
 }
 
 label {
-
+    text-align: center;
+    display:block;
 }
 
 .section {
-
+    border-top: 1px solid #ddd;
+    padding: 10px 0;
 }
 
 .section > label {
+    text-align:left;
 
 }
 
 select {
+    background-color: lightgrey;
+    border-radius:4px;
+    margin-left:10px;
 
 }
 
 textarea {
+    display:block;
+    background-color: lightgrey;
+    border:none;
+    width:100%;
+    margin-top:10px;
+    min-height:100px;
 
 }
 
 .form-button {
-
+    background-color: white;
+    border:2px lightskyblue solid;
+    border-radius:2px;
+    display:block;
+    margin:0 auto;
+    padding:5px 10px;
+    margin-top:10px;
+    transition: background-color 0.2s ease-in-out;
 }
 
 .form-button:hover {
-    
+    background-color:lightskyblue;
+    color:white;
 }
