--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,66 @@
+
+
 h3 {
   margin-bottom: 0;
+}
+
+.header{
+  text-align:center;
+}
+
+.facts{
+  border-spacing: 0;
+  border:1px solid #ddd;
+  border-radius:3px;
+  padding:10px;
+  margin:0 auto;
+  width:100%;
+}
+
+tr:nth-child(even) {
+  background-color: #e6e6e6;
+}
+
+th{
+  text-align: left;
+}
+
+th, td{
+  padding:10px;
+}
+
+.links{
+  display:flex;
+  list-style-type: none;
+  padding:0px;
+  justify-content:space-between;
+}
+
+a{
+  border:1px red solid;
+}
+
+li{
+  border: 1px blue solid;
+}
+
+.links > li{
+  flex:1;
+  margin-right: 20px;
+}
+
+.links > li:last-child {
+  margin-right: 0;
+}
+
+.links a{
+  background-color:lightskyblue;
+  color:white;
+  text-decoration:none;
+  padding:15px;
+  display:inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  width:100%;
+  
 }
