--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -9,8 +9,49 @@ body {
   justify-content: center;
 }
 
+@keyframes slideFade {
+  from{
+    opacity:0;
+    transform:translateX(100%)
+  }
+  to{
+    opacity:1;
+    transform:translateX(0)
+  }
+}
+
 .fast {
+  animation: slideFade 1s ease-in-out
 }
 
 .cool {
+  color:white;
+  background-color:lightblue;
+  padding:10px 15px;
+  text-transform:uppercase;
+  font-size: 1rem;
+  border-radius:6px;
+  box-shadow: 0px 2px 12px 2px #a5a5a5;
+  border:0;
+  cursor: pointer;
+}
+
+@keyframes ollieOops {
+  from{
+    transform:scale(1) rotate(0deg)
+  }
+
+  80%{
+    transform:scale(1.3) rotate(290deg)
+  }
+  90%{
+    transform:scale(0.8) rotate(320deg)
+  }
+  to{
+    transform:scale(1) rotate(360deg)
+  }
+}
+
+.cool:hover{
+  animation: ollieOops 0.8s ease-in-out
 }
