--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -1,49 +1,80 @@
 body {
-    margin: 0;
-    font-family: Poppins, sans-serif;
+  margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
 .header {
-
+  background-color: #2196f3;
+  text-align: center;
+  color: white;
 }
 
 .registration-form {
-
+  width: 90%;
+  margin: 0 auto;
+  border: 1px solid;
+  padding: 5px;
 }
 
 .text-field {
-
+  display: block;
+  text-align: center;
+  margin: 0 auto;
+  margin-bottom: 5px;
 }
 
 .radio-label,
 .checkbox-label {
-
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 label {
-
+  display: block;
+  text-align: center;
 }
 
 .section {
-
+  border-top: 1px solid black;
+  padding-top: 10px;
+  display: block;
+  text-align: left;
+  margin-bottom: 10px;
 }
 
 .section > label {
-
+  display: inline-block;
 }
 
 select {
-
+  background-color: #f0f0f0;
+  margin-left: 10px;
 }
 
 textarea {
-
+  display: block;
+  width: 100%;
+  height: 75px;
+  margin: 0 auto;
+  margin-top: 10px;
+  background-color: #f0f0f0;
 }
 
 .form-button {
-
+  display: block;
+  width: 100px;
+  height: 40px;
+  margin: 0 auto;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  border: 1px blue solid;
+  border-radius: 5px;
+  transition: 0.25s;
+  font-size: 15px;
 }
 
 .form-button:hover {
-    
+  transition: 0.25s;
+  background-color: blue;
+  color: white;
 }
