--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,46 @@
 h3 {
   margin-bottom: 0;
 }
+.header {
+  text-align: center;
+}
+.facts {
+  width: 100%;
+  text-align: left;
+  border: 1px solid black;
+  padding: 10px;
+}
+.facts tbody tr {
+  display: flex;
+  flex-direction: row;
+  line-height: 25px;
+}
+.facts tbody tr:nth-last-child(even) {
+  background-color: #d3d3d3;
+}
+
+.facts tbody tr th,
+.facts tbody tr td {
+  flex: 1;
+}
+.links {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+  align-items: center;
+  text-align: center;
+}
+.links li {
+  list-style-type: none;
+  text-decoration: none;
+  background-color: cornflowerblue;
+  line-height: 40px;
+  width: 24%;
+}
+.links li a {
+  display: inline-block;
+  flex: 1;
+  text-decoration: none;
+  color: white;
+  font-size: larger;
+}
