--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -105,10 +105,11 @@ body {
 }
 
 .radio-label .checkMark:after {
-  top: 2.1px;
-  left: 2.1px;
-  width: 8px;
-  height: 8px;
+  position: relative;
+  top: 3px;
+  left: 3px;
+  width: 6px;
+  height: 6px;
   border-radius: 50%;
   background: white;
 }
