--- a/workshop/exercise-07/style.css
+++ b/workshop/exercise-07/style.css
@@ -5,3 +5,61 @@ body {
 .mobile-nav-button img {
   width: 18px;
 }
+
+header {
+display: flex;
+justify-content: space-between;
+align-items: baseline;
+padding-left: 20px;
+padding-right: 20px;
+}
+
+ul {
+  display: flex;
+  list-style: none;
+}
+
+
+li {
+  margin: 0 20px;
+}
+
+.desktop-nav ul li:last-of-type {
+  /* what is this doing? */
+margin-right: 0;
+}
+
+@media (min-width: 800px) {
+  .mobile-nav {
+    display: none;
+  }
+}
+
+
+@media (max-width: 799px) {
+  .desktop-nav {
+    display: none;
+  }
+}
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
+
