--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -1,49 +1,39 @@
 body {
-    margin: 0;
-    font-family: Poppins, sans-serif;
+  margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
 .header {
-
+  color: blue;
 }
 
 .registration-form {
-
 }
 
 .text-field {
-
 }
 
 .radio-label,
 .checkbox-label {
-
 }
 
 label {
-
 }
 
 .section {
-
 }
 
 .section > label {
-
 }
 
 select {
-
 }
 
 textarea {
-
 }
 
 .form-button {
-
 }
 
 .form-button:hover {
-    
 }
