--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,51 @@
 h3 {
   margin-bottom: 0;
 }
+
+.header {
+  text-align: center;
+}
+
+.facts {
+  border-spacing: 0;
+  width: 100%;
+  border: 1px solid #ddd;
+  border-radius: 4px;
+  padding: 20px;
+}
+
+tr:nth-child(even) {
+  background-color: #e6e6e6;
+}
+
+th {
+  text-align: left;
+}
+
+th,
+td {
+  padding: 10px;
+}
+
+.links {
+  display: flex;
+  padding: 0;
+  justify-content: space-between;
+}
+
+.links > li {
+  list-style-type: none;
+  flex: 1;
+  margin-right: 20px;
+}
+
+.links a {
+  text-decoration: none;
+  color: #fff;
+  background-color: dodgerblue;
+  padding: 20px;
+  display: inline-block;
+  box-sizing: border-box;
+  text-align: center;
+  width: 100%;
+}
