--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -1,13 +1,41 @@
 body {
-    margin: 0;
+  margin: 0;
 }
 
 .nav {
-    background-color: #383737;
+  background-color: #383737;
 }
 
 .nav-dropdown {
-    color: #fff;
-    text-decoration: none;
-    display: inline-block;
+  color: #fff;
+  text-decoration: none;
+  display: inline-block;
+  position: relative;
+  padding: 10px;
+}
+
+.nav-dropdown:hover > .menu {
+  top: 100%;
+  position: absolute;
+  display: block;
+  left: 0;
+  background-color: red;
+}
+
+ul > li {
+  list-style-type: none;
+  padding: 20px;
+}
+
+ul > li:hover {
+  background-color: purple;
+}
+
+.menu {
+  display: none;
+}
+
+ul {
+  margin: 0;
+  padding: 0;
 }
