--- a/workshop/exercise-08/style.css
+++ b/workshop/exercise-08/style.css
@@ -1,49 +1,65 @@
 body {
-    margin: 0;
-    font-family: Poppins, sans-serif;
+  margin: 0;
+  font-family: Poppins, sans-serif;
 }
 
 .header {
-
+  text-align: center;
+  padding: 25px;
+  background-color: blueviolet;
+  color: white;
 }
 
 .registration-form {
-
+  box-shadow: 1px 1px 1px 1px blueviolet;
+  width: 80%;
+  margin: auto;
 }
 
 .text-field {
-
+  display: block;
+  margin-right: auto;
+  margin-left: auto;
 }
 
 .radio-label,
 .checkbox-label {
-
+  text-align: left;
 }
 
 label {
-
+  display: block;
+  text-align: center;
 }
 
 .section {
-
+  border-top: 1px solid blueviolet;
+  margin-top: 10px;
+  margin-bottom: 10px;
 }
 
 .section > label {
-
+  text-align: left;
 }
 
 select {
-
 }
 
 textarea {
-
+  display: block;
+  width: 90%;
+  height: 100px;
+  margin: auto;
 }
 
 .form-button {
-
+  border-radius: 0.5rem;
+  padding: 15px;
+  margin-top: 10px;
+  margin-bottom: 10px;
+  margin-left: 45%;
 }
 
 .form-button:hover {
-    
+  background-color: blueviolet;
 }
