--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,40 @@
 h3 {
   margin-bottom: 0;
 }
+
+.header {
+  text-align: center;
+}
+
+.facts {
+  border: 2px solid red;
+  width: 90%;
+  margin: auto;
+}
+
+tr:nth-child(even) {
+  background-color: lightgrey;
+}
+
+td {
+  text-align: center;
+}
+
+ul {
+  list-style-type: none;
+  display: flex;
+}
+
+li {
+  flex: 1;
+  margin-right: 10%;
+}
+
+a {
+  text-decoration: none;
+  background-color: red;
+  color: white;
+  padding: 15%;
+  display: block;
+  text-align: center;
+}
