--- a/workshop/exercise-06/style.css
+++ b/workshop/exercise-06/style.css
@@ -4,10 +4,39 @@ body {
 
 .nav {
     background-color: #383737;
+    height: 50px;
+    padding-top: 20px
 }
 
 .nav-dropdown {
     color: #fff;
     text-decoration: none;
     display: inline-block;
+}
+
+.dropdown-content {
+    display: none;
+    position: absolute;
+    background-color: hsl(244, 94%, 49%);
+    min-width: 160px;
+    z-index: 1;
+  }
+  .dropdown-content a {
+    color: white;
+    padding: 12px 16px;
+    text-decoration: none;
+    display: block;
+  }
+
+.dropdown-content a:hover {
+    background-color: navy
+}
+
+.nav-dropdown:hover .dropdown-content {
+    display: block;
+}
+ul{
+    list-style-type: none;
+    padding: 0px;
+    margin: 0
 }
