--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,49 @@
 h3 {
   margin-bottom: 0;
 }
+
+.facts {
+  display: flex;
+  width: 100%;
+  border: 1px solid grey;
+  border-radius: 5px;
+}
+
+tbody {
+  flex: 1;
+  padding: 25px;
+}
+
+tr {
+  text-align: left;
+  display: flex;
+  padding: 5px;
+}
+
+tr:nth-child(even) {
+  background-color: lightgray;
+}
+
+th,
+td {
+  flex: 1;
+}
+
+.links {
+  display: flex;
+  padding: 0;
+}
+
+.links li {
+  flex: auto;
+  list-style: none;
+  padding: 10px;
+  text-align: center;
+  margin: 2px;
+  background-color: #028cdb;
+}
+
+.links li a {
+  text-decoration: none;
+  color: #fff;
+}
