--- a/workshop/exercise-10/style.css
+++ b/workshop/exercise-10/style.css
@@ -10,7 +10,38 @@ body {
 }
 
 .fast {
+  animation: zoomit 4s linear infinite;
+}
+
+@keyframes zoomit {
+  0% {
+    transform: translate(200px,0);
+    opacity: 0;
+  }
+  30%, 100%{
+    opacity: 1;
+    transform: translate(0,0);
+  }
 }
 
 .cool {
+  background: #1E88E5;
+  border: none;
+  padding: 20px;
+  color: white;
+  text-transform: uppercase;
+  border-radius: 5px;
+  box-shadow: 0 0 8px grey;
+}
+
+.cool:hover {
+  cursor:pointer;
+  animation: embiggen 1s linear forwards;
+}
+
+@keyframes embiggen {
+  0% {transform: scale(1)}
+  80% {transform: scale(1.2)}
+  90% {transform: scale(0.55)}
+  100% {transform: scale(1})}
 }
