--- a/workshop/exercise-09/style.css
+++ b/workshop/exercise-09/style.css
@@ -1,3 +1,52 @@
+h1 {
+  text-align: center;
+}
+
 h3 {
   margin-bottom: 0;
+}
+
+table {
+  width: 100%;
+  border-spacing: 0;
+  border-radius: 2px;
+  border: 1px solid lightgrey;
+  padding: 10px;
+}
+
+th {
+  text-align: left;
+  padding-bottom: 5px;
+}
+
+td {
+  padding: 10px;
+}
+
+tr:nth-child(even) {
+  background: lightgrey;
+}
+
+ul {
+  display: flex;
+  padding: 0;
+  justify-content: space-evenly;
+}
+
+li {
+  flex: 1;
+  color: white;
+  background: #2190eb;
+  margin-right: 15px;
+  padding: 10px;
+  text-align: center;
+}
+
+li:last-child {
+  margin-right: 0;
+}
+
+a {
+  text-decoration-line: none;
+  color: white;
 }
